--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body color='grey'>
-    <h1>Hello World</h1>
+    <h1 align='center' >Hello World!</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
 </html>
