--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body color='grey'>
     <h1 align='center' >Hello World!</h1>
-    <p><img src='https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/954802_644123862269810_512556772_n.jpg' /></p>
+    <p><!--<img src='https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/954802_644123862269810_512556772_n.jpg' />--></p>
   </body>
 </html>
