update index page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body color='grey'>
-    <h1 align='center' >Hello World!</h1>
+    <h1 align='center' >This is Sarath's Page. Thanks for visiting. Edit in progress</h1>
     <p><!--<img src='https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/954802_644123862269810_512556772_n.jpg' />--></p>
   </body>
 </html>
