LinkedIn badge addition

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <body color='grey'>
     <h1 align='center' >This is Sarath's Page. Thanks for visiting. Edit in progress</h1>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <p><!--<img src='https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/954802_644123862269810_512556772_n.jpg' />--></p>
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="sarath-babu-66392555"><a class="LI-simple-link" href='https://in.linkedin.com/in/sarath-babu-66392555?trk=profile-badge'>Sarath Babu</a></div>
   </body>
 </html>
